# laboratorio

./: .gitignore  ACCESSIBILITY_MOUSE_CONTROL_EXAMPLE.md  COMO_EXECUTAR.md  GITHUB_PUSH_INSTRUCTIONS.md  README.md  index.html  package.json  pnpm-lock.yaml  todo.md  vitest.config.ts
.github/workflows/: extension-ci.yml
backend/: package.json  pnpm-lock.yaml  vitest.config.ts
backend/src/: index.ts
browser-agent/: .gitignore  ANALISE_COMPLETA_PROBLEMAS.md  COMECE_AQUI.md  CONFIGURACAO_SEM_BACKEND.md  GUIA_COMPLETO_USO.md  INICIO_RAPIDO.md  MODO_DIRETO_SETUP.md  RESUMO_MODO_DIRETO.md
browser-agent/backend/: .env.example  pyproject.toml  requirements.txt  start.sh
browser-agent/backend/app/: config.py  main.py
browser-agent/backend/app/agent/: context_builder.py  orchestrator.py
browser-agent/backend/app/api/: health.py  ws.py
browser-agent/backend/app/llm/: computer_use.py  gemini_agent.py
browser-agent/backend/app/models/: accessibility.py  actions.py  messages.py
browser-agent/backend/app/session/: manager.py
browser-agent/extension/: .gitignore  configure-direct-mode.js  manifest.json  package-lock.json  package.json  setup-api-key.html  sidepanel.html  tsconfig.json  vite.config.ts
docs/: api.md  exemplos.md  guia-de-uso.md  troubleshooting.md
src/: App.css  App.tsx  test-setup.ts
src/__tests__/: useActionHistory.test.ts  useDOMCapture.test.ts  useKeyboardNav.test.ts  useScreenshot.test.ts
src/components/: AccessibilityDemo.tsx  CommandCenter.tsx  DOMAccessibilityPanel.tsx  DOMCapturePanel.tsx  ScreenshotsPanel.tsx  VisionPanel.tsx
(+73 files in other folders)
