[tool.poetry]
name = "browser-agent-backend"
version = "0.1.0"
description = "Backend FastAPI para o Browser Agent"
authors = ["ederson"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
websockets = "^13.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
anthropic = "^0.40.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
